--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -67,8 +67,13 @@
                 <div >
                 <div class="search__form">
                     <form action="" method="">
-                        <input class="search__producto" placeholder="Ordenar productos por">
-                        <input class="search__button" name="boton1" type="image" alt="submit" src="../img/flecha.svg">
+                        <select class="ordenar__producto"  placeholder="Ordenar productos por">
+                            <option value="popularidad">Ordenar por popularidad</option>
+                            <option value="nombre">Ordenar por nombre</option>
+                            <option value="tamaño">Ordenar por tamaño</option>
+                            <option value="caro">Ordenar por más caro</option>
+                            <option value="barato">Ordenar por más barato</option>
+                        </select>
                     </form>
                 </div>
             </div>
