--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tres Dulces Niñas</title>
     <link rel="shortcut icon" href="./img/logosinfondo.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
+
 </head>
 
 <body>
@@ -18,9 +21,45 @@
                         <img src="./img/logosinfondo.png" alt="Logo Tres Dulces Niñas">
                     </a>
                 </div>
+                <nav class="navbar navbar-light">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                            <span class="navbar-toggler-icon "></span>
+                        </button>
+                        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/tienda.html">Tienda</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="./pages/catering.html">Catering</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                            <form class="d-flex" role="search">
+                                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                                <button class="btn btn-outline-dark" type="submit">Buscar</button>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
+                </nav>
                 <div class="buscar">
                     <form action="/action_page.php">
-                        <input class="buscar__producto" placeholder="Buscar">
+                        <input class="buscar__producto"  placeholder="Buscar">
                         <input class="buscar__button" name="boton1" type="image" alt="submit" src="./img/lupa.svg">
                     </form>
                     <a class="cart" href="./pages/tienda.html">
@@ -28,10 +67,10 @@
                     </a>
                 </div>
             </div>
-            <nav class="navbar">
+            <nav class="container">
                 <ul class="menu">
                     <li class="menu__item">
-                        <a class="menu__link" href="index.html">INICIO</a>
+                        <a class="menu__link" href="./index.html">INICIO</a>
                     </li>
                     <li class="menu__item">
                         <a class="menu__link" href="./pages/nosotros.html">NOSOTROS</a>
@@ -52,31 +91,33 @@
 
     <main>
         <section class="container">
-            <div class="salto__linea">
-                <img src="./img/saltodelinea.svg" alt="decoración">
-            </div>
-            <div class="inicio">
-                <div class="inicio__descripcion">
-                    <p>Somos un equipo familiar dedicado a complacer los paladares de todos nuestros clientes, poniendo mucha pasión y amor a cada una de nuestras exquisitas y mágicas recetas, que traspasan fronteras.</p>
+            <div>
+                <div class="salto__linea">
+                    <img src="./img/saltodelinea.svg" alt="decoración">
                 </div>
-                <div class="pictures">
-                    <div class="pictures__torta1">
-                        <img src="./img/inicio1.jpg" alt="torta/postre">
-                    </div>
-                    <div class="pictures__torta2">
-                        <img src="./img/inicio2.jpg" alt="torta/postre">
+                <div class="inicio">
+                    <article class="inicio__descripcion">
+                        <p data-aos="fade-down">Somos un equipo familiar dedicado a complacer los paladares de todos nuestros clientes, poniendo mucha pasión y amor a cada una de nuestras exquisitas y mágicas recetas, que traspasan fronteras.</p>
+                    </article>
+                    <div class="pictures">
+                        <figure class="pictures__torta1" data-aos="zoom-in">
+                            <img src="./img/inicio1.jpg" alt="torta/postre">
+                        </figure>
+                        <figure class="pictures__torta2" data-aos="zoom-in">
+                            <img src="./img/inicio2.jpg" alt="torta/postre">
+                        </figure>
                     </div>
                 </div>
-            </div>
-            <div class="salto__linea">
-                <img src="./img/saltodelinea.svg" alt="decoración">
+                <div class="salto__linea">
+                    <img src="./img/saltodelinea.svg" alt="decoración">
+                </div>
             </div>
         </section>
 
         <section class="container">
             <div class="tienda">
-                <div class="tienda__galeria">
-                    <div class="producto">
+                <div class="tienda__galeria row" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+                    <div class="producto col">
                         <div class="producto__picture">
                             <img src="./img/producto1.jpg" alt="torta/postre">
                         </div>
@@ -87,7 +128,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="producto">
+                    <div class="producto col">
                         <div class="producto__picture">
                             <img src="./img/producto2.jpg" alt="torta/postre">
                         </div>
@@ -98,7 +139,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="producto">
+                    <div class="producto col">
                         <div class="producto__picture">
                             <img src="./img/producto3.jpg" alt="torta/postre">
                         </div>
@@ -109,7 +150,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="producto">
+                    <div class="producto col">
                         <div class="producto__picture">
                             <img src="./img/producto4.jpg" alt="torta/postre">
                         </div>
@@ -126,8 +167,8 @@
                 </div>
             </div>
             <div class="tienda">
-                <div class="tienda__galeria">
-                    <div class="producto">
+                <div class="tienda__galeria row" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+                    <div class="producto col">
                         <div class="producto__picture">
                             <img src="./img/producto5.jpg" alt="torta/postre">
                         </div>
@@ -138,7 +179,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="producto">
+                    <div class="producto col">
                         <div class="producto__picture">
                             <img src="./img/producto6.jpg" alt="torta/postre">
                         </div>
@@ -149,7 +190,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="producto">
+                    <div class="producto col">
                         <div class="producto__picture">
                             <img src="./img/producto7.jpg" alt="torta/postre">
                         </div>
@@ -160,7 +201,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="producto">
+                    <div class="producto col">
                         <div class="producto__picture">
                             <img src="./img/producto8.jpg" alt="torta/postre">
                         </div>
@@ -217,6 +258,10 @@
             <h6 class="text_copyright">© Copyright Tres Dulces Niñas 2019-2022. Todos los derechos reservados.</h6>
         </section>
     </footer>
-    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
