--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tres Dulces Niñas</title>
     <link rel="shortcut icon" href="../img/logosinfondo.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
@@ -14,13 +15,49 @@
         <div class="banner__contacto">
             <div class="top">
                 <div>
-                    <a class="top__logo" href="./index.html">
+                    <a class="top__logo" href="../index.html">
                         <img src="../img/logosinfondo.png" alt="Logo Tres Dulces Niñas">
                     </a>
                 </div>
+                <nav class="navbar navbar-light">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                            <span class="navbar-toggler-icon "></span>
+                        </button>
+                        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./tienda.html">Tienda</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="./catering.html">Catering</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                            <form class="d-flex" role="search">
+                                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                                <button class="btn btn-outline-dark" type="submit">Buscar</button>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
+                </nav>
                 <div class="buscar">
                     <form action="/action_page.php">
-                        <input class="buscar__producto" placeholder="Buscar">
+                        <input class="buscar__producto"  placeholder="Buscar">
                         <input class="buscar__button" name="boton1" type="image" alt="submit" src="../img/lupa.svg">
                     </form>
                     <a class="cart" href="./tienda.html">
@@ -28,7 +65,7 @@
                     </a>
                 </div>
             </div>
-            <nav class="navbar">
+            <nav class="container">
                 <ul class="menu">
                     <li class="menu__item">
                         <a class="menu__link" href="../index.html">INICIO</a>
@@ -259,5 +296,6 @@
             <h6 class="text_copyright">© Copyright Tres Dulces Niñas 2019-2022. Todos los derechos reservados.</h6>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
