--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tres Dulces Niñas</title>
     <link rel="shortcut icon" href="../img/logosinfondo.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
     
@@ -14,10 +16,46 @@
         <div class="banner__nosotros">
             <div class="top">
                 <div>
-                    <a class="top__logo" href="./index.html">
+                    <a class="top__logo" href="../index.html">
                         <img src="../img/logosinfondo.png" alt="Logo Tres Dulces Niñas">
                     </a>
                 </div>
+                <nav class="navbar navbar-light">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                            <span class="navbar-toggler-icon "></span>
+                        </button>
+                        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./tienda.html">Tienda</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="./catering.html">Catering</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                            <form class="d-flex" role="search">
+                                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                                <button class="btn btn-outline-dark" type="submit">Buscar</button>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
+                </nav>
                 <div class="buscar">
                     <form action="/action_page.php">
                         <input class="buscar__producto"  placeholder="Buscar">
@@ -28,7 +66,7 @@
                     </a>
                 </div>
             </div>
-            <nav class="navbar">
+            <nav class="container">
                 <ul class="menu">
                     <li class="menu__item">
                         <a class="menu__link" href="../index.html">INICIO</a>
@@ -59,17 +97,23 @@
                 <div class="nosotros__titulo">
                     <h1>Tres Dulces Niñas</h1>
                 </div>
-                <div class="nosotros__descripcion">
+                <div class="nosotros__descripcion" data-aos="zoom-in">
                     <p>Nace en Venezuela el año 2019 a raiz de la Pandemia Mundial provocada por el virus Covid-19. Se trata de un emprendimiento familiar atendido por tres hermanas que en vista de la pandemia, la cual impidió que cada una pudieran desempeñar con normalidad sus antiguos trabajos, deciden explorar el mundo de la pasteleria, logrando así enamorarse de esta bella arte.</p>
                 </div>
             </div>
             <div class="nosotros__picture">
-                <img src="../img/nosotros1.jpg" alt="torta/postre">
-                <img src="../img/logosinfondo.png" alt="torta/postre">
-                <img src="../img/nosotros3.jpg" alt="torta/postre">
+                <figure>
+                    <img src="../img/nosotros1.jpg" alt="torta/postre">
+                </figure>
+                <figure>
+                    <img src="../img/logosinfondo.png" alt="torta/postre">
+                </figure>
+                <figure>
+                    <img src="../img/nosotros3.jpg" alt="torta/postre">
+                </figure>
             </div>
             <article>
-                <div class="nosotros__descripcion">
+                <div class="nosotros__descripcion" data-aos="zoom-in">
                     <p >En el año 2020 una de nosotras viaja hasta Argentina y luego de dos años estabilizándose en dicho país, logra concretar la apertura de una nueva sucursal de Tres Dulces Niñas. Ahora nuestros amigos argentinos también pueden disfrutar de nuestros exquisitos sabores que ahora, traspasan fronteras. </p>
                 </div>
             </article>
@@ -80,10 +124,10 @@
         </div>
 
         <section class="container">
-            <div class="nosotros__descripcion">
+            <div class="nosotros__descripcion" data-aos="zoom-in">
                 <p>Desde hace tres años nos dedicamos a complacer a cada cliente de una forma única y especial brindándole diversidad de gustos y sabores, siendo para nosotras una gran muestra de amor cada reseña y comentario positivo que nos brindan luego de probar uno o varios de nuestros postres, tortas y variedad de productos que tenemos para ustedes.</p>
             </div>
-            <div class="nosotros__agradecimiento">
+            <div class="nosotros__agradecimiento" data-aos="zoom-in">
                 <p>Estamos más que agradecidas por la recepción que nos han brindado en ambos paises y seguiremos aquí, para ustedes.</p>
             </div>
             <div class="salto__linea">
@@ -130,5 +174,10 @@
             <h6 class="text_copyright">© Copyright Tres Dulces Niñas 2019-2022. Todos los derechos reservados.</h6>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
