--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./img/logosinfondo.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/translated.css">
 
 </head>
 
@@ -27,33 +27,33 @@
                             <span class="navbar-toggler-icon "></span>
                         </button>
                         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                        <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
-                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./pages/tienda.html">Tienda</a>
-                                </li>
-                                <li class="nav-item">
-                                <a class="nav-link" href="./pages/catering.html">Catering</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                                </li>
-                            </ul>
-                            <form class="d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                                <button class="btn btn-outline-dark" type="submit">Buscar</button>
-                            </form>
-                        </div>
+                            <div class="offcanvas-header">
+                                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./pages/tienda.html">Tienda</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="./pages/catering.html">Catering</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                    </li>
+                                </ul>
+                                <form class="d-flex" role="search">
+                                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                                    <button class="btn btn-outline-dark" type="submit">Buscar</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </nav>
@@ -62,7 +62,7 @@
                         <input class="buscar__producto"  placeholder="Buscar">
                         <input class="buscar__button" name="boton1" type="image" alt="submit" src="./img/lupa.svg">
                     </form>
-                    <a class="cart" href="./pages/tienda.html">
+                    <a class="buscar__cart" href="./pages/tienda.html">
                         <img src="./img/carrito.svg" alt="carrito de compras">
                     </a>
                 </div>
@@ -226,7 +226,7 @@
                 <div class="pie__titulo">
                     <h2>Síguenos</h2>
                 </div>
-                <div class="redes">
+                <div class="pie__logos">
                     <a class="redes__logo" href=""> <img src="./img/logoface.svg" alt="logo facebook"> </a>
                     <a class="redes__logo" href=""> <img src="./img/logoinsta.svg" alt="logo instagram"> </a>
                     <a class="redes__logo" href=""> <img src="./img/logotiktok.svg" alt="logo tiktok"> </a>
