--- a/pages/catering.html
+++ b/pages/catering.html
@@ -7,6 +7,7 @@
     <title>Tres Dulces Niñas</title>
     <link rel="shortcut icon" href="../img/logosinfondo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../css/translated.css">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
@@ -60,7 +61,7 @@
                         <input class="buscar__producto"  placeholder="Buscar">
                         <input class="buscar__button" name="boton1" type="image" alt="submit" src="../img/lupa.svg">
                     </form>
-                    <a class="cart" href="./tienda.html">
+                    <a class="buscar__cart" href="./tienda.html">
                         <img src="../img/carrito.svg" alt="carrito de compras">
                     </a>
                 </div>
@@ -246,7 +247,7 @@
                 <div class="pie__titulo">
                     <h2>Síguenos</h2>
                 </div>
-                <div class="redes">
+                <div class="pie__logos">
                     <a class="redes__logo" href=""> <img src="../img/logoface.svg" alt="logo facebook"> </a>
                     <a class="redes__logo" href=""> <img src="../img/logoinsta.svg" alt="logo instagram"> </a>
                     <a class="redes__logo" href=""> <img src="../img/logotiktok.svg" alt="logo tiktok"> </a>
