--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="PASTELERIA, TORTAS, PASTEL, CUPCAKES, CHOCOLATE, DULCE DE LECHE, TARTA, DESAYUNOS, MERIENDAS, POSTRES, VENTA, ARGENTINA, NIÑAS, DULCES, CATERING, GALLETAS, EVENTOS, CUMPLEAÑOS, BAUTISMO, MATRIMONIO, GRADUACIONES, 15 AÑOS">
+    <meta name="description" content=" Te invito a conocer todas las variedades de postres que tenemos para ti y para tus eventos. No te vas a arrepentir una vez que los pruebes.">
     <title>Tres Dulces Niñas</title>
     <link rel="shortcut icon" href="./img/logosinfondo.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
