--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tres Dulces Niñas</title>
+    <meta name="keywords" content="PASTELERIA, TORTAS, PASTEL, CUPCAKES, CHOCOLATE, DULCE DE LECHE, TARTA, DESAYUNOS, MERIENDAS, POSTRES, VENTA, ARGENTINA, NIÑAS, DULCES, CATERING, GALLETAS, EVENTOS, CUMPLEAÑOS, BAUTISMO, MATRIMONIO, GRADUACIONES, 15 AÑOS">
+    <title>Tres Dulces Niñas-Tienda</title>
     <link rel="shortcut icon" href="../img/logosinfondo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/translated.css">
